 * Issue 142: per-process get and set niceness (priority).
 * Issue 147: per-process I/O nice (priority) - Linux only.
 * Issue 148: psutil.Popen class which tidies up subprocess.Popen and
   psutil.Process in a unique interface.
 * Issue 152: (OSX) get_process_open_files() implementation has been rewritten
   in C and no longer relies on lsof resulting in a 3x speedup.

BUGFIXES

 * Issue 83: process cmdline is empty on OSX 64-bit.
 * Issue 130: a race condition can cause IOError exception be raised on
   Linux if process disappears between open() and subsequent read() calls.
 * Issue 145: WindowsError was raised instead of psutil.AccessDenied when using
   process resume() or suspend() on Windows.
 * Issue 146: 'exe' property on Linux can raise TypeError if path contains NULL
   bytes.
 * Issue 151: exe and getcwd() for PID 0 on Linux return inconsistent data.

API CHANGES

 * Process "uid" and "gid" properties are deprecated in favor of "uids" and
   "gids" properties.


0.2.0 - 2010-11-13
------------------

NEW FEATURES

 * Issue 79: per-process open files.
 * Issue 88: total system physical cached memory.
 * Issue 88: total system physical memory buffers used by the kernel.
 * Issue 91: per-process send_signal() and terminate() methods.
 * Issue 95: NoSuchProcess and AccessDenied exception classes now provide "pid",
   "name" and "msg" attributes.
 * Issue 97: per-process children.
 * Issue 98: Process.get_cpu_times() and Process.get_memory_info now return
   a namedtuple instead of a tuple.
 * Issue 103: per-process opened TCP and UDP connections.
 * Issue 107: add support for Windows 64 bit. (patch by cjgohlke)
 * Issue 111: per-process executable name.
 * Issue 113: exception messages now include process name and pid.
 * Issue 114: process username Windows implementation has been rewritten in pure
   C and no longer uses WMI resulting in a big speedup. Also, pywin32 is no
   longer required as a third-party dependancy. (patch by wj32)