@@ -18,6 +18,8 @@ NEW FEATURES
    psutil.Process in a unique interface.
  * Issue 152: (OSX) get_process_open_files() implementation has been rewritten
    in C and no longer relies on lsof resulting in a 3x speedup.
+ * Issue 153: (OSX) get_process_connection() implementation has been rewritten
+   in C and no longer relies on lsof resulting in a 3x speedup.
 
 BUGFIXES
 
